# zsh-static-docker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  Readme.md
.github/workflows/: build.yml  pack.yml  rs.yml  test.yml
assets/: actions.json  all_archs.ron
assets/builder/: Dockerfile
assets/markmap/: platforms.md
src/: Dockerfile  build  cli.rs  digest.rs  main.rs  static_vals.rs
